examples/errors/parsing/tuples.cn
fun swap : (int * int) -> (int * int) [pure] = {
  (x, y) -> (y, x)
}

main : () [impure] =
  let p = swap (3, 4);
  ()
